<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainStage">

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numer_telefonu"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="202dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/imie"
        android:inputType="textPersonName"
        android:minEms="1"
        android:minLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/SecondScreenBtn"
        android:layout_width="105dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/dalej"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

    <ImageButton
        android:id="@+id/FacebookBtn"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/fb_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondScreenBtn"
        android:contentDescription="@string/facebook" />

</android.support.constraint.ConstraintLayout>